0.9.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.customizable_viz.VizHorizField.rst.txt
polaris.tasks.ocean.customizable\_viz.VizHorizField
===================================================

.. currentmodule:: polaris.tasks.ocean.customizable_viz

.. autoclass:: VizHorizField

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~VizHorizField.__init__
      ~VizHorizField.add_dependency
      ~VizHorizField.add_input_file
      ~VizHorizField.add_output_file
      ~VizHorizField.constrain_resources
      ~VizHorizField.map_from_native_model_vars
      ~VizHorizField.map_to_native_model_vars
      ~VizHorizField.open_model_dataset
      ~VizHorizField.process_inputs_and_outputs
      ~VizHorizField.run
      ~VizHorizField.runtime_setup
      ~VizHorizField.set_resources
      ~VizHorizField.set_shared_config
      ~VizHorizField.setup
      ~VizHorizField.validate_baselines
      ~VizHorizField.write_model_dataset
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~VizHorizField.component
   
   