1.1.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.customizable_viz.VizHorizField.rst.txt
polaris.tasks.ocean.customizable\_viz.VizHorizField
===================================================

.. currentmodule:: polaris.tasks.ocean.customizable_viz

.. autoclass:: VizHorizField

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~VizHorizField.__init__
      ~VizHorizField.add_dependency
      ~VizHorizField.add_horiz_mesh_input_file
      ~VizHorizField.add_init_input_file
      ~VizHorizField.add_input_file
      ~VizHorizField.add_output_file
      ~VizHorizField.add_output_files_for_ocean_model_input
      ~VizHorizField.add_produced_file
      ~VizHorizField.add_property_check
      ~VizHorizField.add_vert_coord_input_file
      ~VizHorizField.check_properties
      ~VizHorizField.constrain_resources
      ~VizHorizField.get_horiz_mesh_filename
      ~VizHorizField.get_init_filename
      ~VizHorizField.get_vert_coord_filename
      ~VizHorizField.map_from_native_model_vars
      ~VizHorizField.map_to_native_model_vars
      ~VizHorizField.open_model_dataset
      ~VizHorizField.open_vert_coord_dataset
      ~VizHorizField.process_inputs_and_outputs
      ~VizHorizField.run
      ~VizHorizField.runtime_setup
      ~VizHorizField.set_resources
      ~VizHorizField.set_shared_config
      ~VizHorizField.setup
      ~VizHorizField.validate_baselines
      ~VizHorizField.work_path
      ~VizHorizField.write_horiz_mesh_dataset
      ~VizHorizField.write_initial_state_dataset
      ~VizHorizField.write_model_dataset
      ~VizHorizField.write_vert_coord_dataset
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~VizHorizField.cores
      ~VizHorizField.gpus
      ~VizHorizField.may_span_nodes
      ~VizHorizField.min_cores
      ~VizHorizField.min_gpus
      ~VizHorizField.component
      ~VizHorizField.config
      ~VizHorizField.input_data
      ~VizHorizField.logger
   
   